adl-frontend/src/test/resources/unit/error/semantic/attributes/attr83.adl
primitive attributes.attr83(a, b) extends attr7(a), attr8(b) {}
